테스트페이지 중간 커밋  - 캠페인 페이지 추가

--- a/src/HenaWebsite/HenaWebsite.csproj
+++ b/src/HenaWebsite/HenaWebsite.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\hena\js\NewFolder\" />
     <Folder Include="wwwroot\hena\js\pages\landing\" />
   </ItemGroup>
 
