광고디자인 테스트 페이지 추가

--- a/src/HenaWebsite/HenaWebsite.csproj
+++ b/src/HenaWebsite/HenaWebsite.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>HenaWebsite</RootNamespace>
     <AssemblyName>HenaWebsite</AssemblyName>
     <Platforms>AnyCPU;x64</Platforms>
+    <TypeScriptToolsVersion>3.0</TypeScriptToolsVersion>
   </PropertyGroup>
 
   <ItemGroup>
