테스트페이지 기본 등록기능 적용  - Campaign  - Ad Design  - App  - Ad Unit

--- a/src/HenaWebsite/HenaWebsite.csproj
+++ b/src/HenaWebsite/HenaWebsite.csproj
@@ -35,6 +35,15 @@
     <Content Update="Views\Campaigns\Reports.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Views\Dashboard\_TestAppsPartial.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Dashboard\_TestCampaignsPartial.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Dashboard\Test.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Views\Dashboard\Index_backup.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
