광고 요청,노출,클릭 기초작업.

--- a/src/HenaWebsite/HenaWebsite.csproj
+++ b/src/HenaWebsite/HenaWebsite.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="API\PublicAPI\" />
     <Folder Include="wwwroot\hena\js\NewFolder\" />
     <Folder Include="wwwroot\hena\js\pages\landing\" />
   </ItemGroup>
