--- a/src/HenaTestCode/HenaTestCode.csproj
+++ b/src/HenaTestCode/HenaTestCode.csproj
@@ -4,6 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>HenaTestCode</RootNamespace>
+    <ApplicationIcon />
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
