FTP설정 config.json 파일에서 읽도록 수정

--- a/src/HenaWebsite/wwwroot/App_Data/config.json
+++ b/src/HenaWebsite/wwwroot/App_Data/config.json
@@ -4,5 +4,9 @@
 	"SupportEmailSmtpPort": 587,
 	"SupportEmailId": "noreply@hena.io",
 	"SupportEmailPassword": "Hena1188!",
-	"SupportEmailDisplayName": "Hena AIC"
+	"SupportEmailDisplayName": "Hena AIC",
+
+	"FTPHost": "ftp://hena.io",
+	"FTPId": "henacoin",
+	"FTPPassword": "henacoin2"
 }
